# esp32-experimentation

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
embedded/: Cargo.toml  diagram.json  wokwi.toml
embedded/.cargo/: config.toml
embedded/.devcontainer/: devcontainer.json
embedded/docs/: README.md
embedded/scripts/: flash.sh
embedded/src/: main.rs
