[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*", features = ["http2", "macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
dotenvy = { git = "https://github.com/allan2/dotenvy" , features = ["macros"] } 
axum-response-cache = "0.3.0"
yahoo_finance_api = "3.0.0"

