[package]
edition = "2021"
name    = "embedded"
version = "0.1.0"

[[bin]]
name = "embedded"
path = "./src/bin/async_main.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.7.0", features = ["defmt", "nightly"]}
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c6",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "^1.0.0-beta.0", features = ["defmt", "esp32c6", "unstable"] } #psram
esp-wifi = { version = "*", default-features = false, features = ["ble", "coex", "defmt", "esp-alloc", "esp32c6", "wifi"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "*", features = ["defmt", "esp32c6"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
#esp-println = { version = "*" }
#esp-storage = "*"
esp-ieee802154 = { version = "*", features = ["esp32c6"] } #"defmt", 
cfg-if = "1.0.0"


[features]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-wifi/esp32c6", "esp-ieee802154/esp32c6"] #"esp-storage/esp32c6","esp-println/esp32c6", 
#embassy                = ["dep:esp-hal-embassy"]
#esp-wifi = ["dep:esp-wifi"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
