[package]
name = "embedded"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2024"
resolver = "2"

[[bin]]
name = "embedded"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "*", features = ["embassy-time-driver", "embassy-sync", "experimental", "nightly", "critical-section"] } # "critical-section"
anyhow = "1.0.98"
defmt = "1.0.1"
smart-leds = "0.4.0"
embassy-time = "*"

[build-dependencies]
embuild = "*"
